# bremsstrahlung-calc

./: .gitignore  CLAUDE.md  README.md  config.py  pyproject.toml  run.sh
.claude/: launch.json
data/: estar_elements.json  extract_sb_tables.py  sb_elements.json  validate.py  xcom_elements.json
data/bremslib/: build_ddcs_table.py  generate_tables.py
data/experimental/: extract_pandola_figures.py
data/experimental/dance_1968/: README.md  dance_1968.json  import_wpd_csv.py
data/nasa_tnd4755/: tables.json
geant4_validation/: CMakeLists.txt  batch_run.py  build_killsphere.sh  fe_3mev_killsphere.cc  fe_3mev_rings.cc  fe_3mev_tally.cc  fe_3mev_vis.cc  g4env.sh  plot_results.py  thick_target_brems.cc  vis.mac
server/: data_access.py  data_access_experimental.py  data_access_geant4.py  main.py
server/api/: __init__.py  geant4.py  materials.py  spectrum.py  validation.py
server/monte_carlo/: __init__.py  cache.py  geant4.py
server/physics/: _validation.py  attenuation.py  bethe_heitler.py  bremslib.py  electron_range.py  interpolation.py  scattering.py  seltzer_berger.py  stopping_power.py  thick_target.py
static/css/: main.css
static/js/: app.js  controls.js  plots.js  utils.js
templates/: index.html
tests/: conftest.py  test_api.py  test_bethe_heitler.py  test_electron_range.py  test_geant4_lookup.py  test_interpolation.py  test_stopping_power.py
