[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.packages.find]
include = ["server*", "data*"]

[project]
name = "bremsstrahlung-calc"
version = "0.1.0"
description = "Thick-target bremsstrahlung calculator based on NASA TN D-4755"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "numpy>=2.0",
    "scipy>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",              # isort
    "UP",             # pyupgrade
    "B",              # flake8-bugbear
    "SIM",            # flake8-simplify
    "A",              # flake8-builtins (no shadowing id/type/list/dict)
    "T20",            # flake8-print (use logging, not print)
    "S",              # flake8-bandit (security)
    "C90",            # mccabe complexity
    "PT",             # flake8-pytest-style
    "RUF",            # ruff-specific
    "PERF",           # performance anti-patterns
    "LOG",            # logging best practices
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: full NASA validation sweep (deselect with -m 'not slow')",
    "nasa: requires digitized NASA data files",
]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.coverage.run]
source = ["server"]

[tool.coverage.report]
fail_under = 80
show_missing = true
